[fix] 대출 상환 오류 픽스